--- a/Software Rankings/text_pc.html
+++ b/Software Rankings/text_pc.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Text_pc</title>
+	<title>Terms</title>
 	<meta name='description' content="" />
 	<meta name="keywords" content="" />
 	<!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
