--- a/love-but/index.html
+++ b/love-but/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
-	<title>Главная</title>
+	<title>Love-but</title>
 	<meta name='description' content=""/>
 	<meta name="keywords" content=""/>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
