--- a/Test/index.html
+++ b/Test/index.html
@@ -46,7 +46,7 @@
         <div class="block-download__wrap">
           <h3 class="block-download__title wow fadeInUp" data-wow-duration="1s">OUR <br> LIGHTPAPER</h3>
           <p class="block-download__text wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Team is currently working on all its documents.</p>
-          <button class="block-download__btn">download</button>
+          <button class="block-download__btn wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">download</button>
         </div>
       </div>
       <img class="block-download__journal" src="./img/journal.png" alt="">
